# Mix_Mind_v5.0

./: .gitignore  README.md  pyproject.toml  wishlist.md
presets/: band_presets.json
tests/: test_xair_mcp.py
xair_mcp/: __init__.py  conversions.py  ms_client.py  osc_client.py  osc_map.py  server.py
