[project]
name = "xair-mcp"
version = "0.1.0"
description = "MCP server for natural-language control of the Behringer X-Air 18 (XR18/X18) and the Mixing Station desktop app"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.scripts]
xair-mcp = "xair_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xair_mcp*"]
